2011-06-30  6.7.0-10 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.0-10.

2011-06-29  6.7.0-7 Glenn Randers-Pehrson <glennrp@image...>
  * Handle "-quality 97" properly in the png encoder, .e., to use
    intrapixel filtering when writing a MNG file. and no filtering when
    writing a PNG file.
  * Added support for Z_RLE strategy in the png compressor, using
    -quality 98 or 99.

2011-06-28  6.7.0-10 Cristy  <quetzlzacatenango@image...>
  * Properly allocate points when render text with large font size (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=18997).

2011-06-25  6.7.0-9 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.0-9.

2011-06-18  6.7.0-9 Cristy  <quetzlzacatenango@image...>
  * Defend against corrupt PSD resource blocks.

2011-06-15  6.7.0-8 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.0-8.

2011-06-14  6.7.0-8 Anthony Thyssen <A.Thyssen@griffith...>
  * Added Initial implementation of Cylinder to/from Plane 3D Distorts
    Includes derivative (scaled lookup), and anti-aliased horizon (validity)
    Currently can NOT handle extractions from full 360 cylinder panoramas.

2011-06-13  6.7.0-7 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.0-7.

2011-06-09  6.7.0-7 Cristy  <quetzlzacatenango@image...>
  * Fixed "conversion from unsigned __int64 to double not implemented"
    so IM can compile under VisualStudio 6.

2011-06-08  6.7.0-7 Glenn Randers-Pehrson <glennrp@image...>
  * The PNG encoder would sometimes make black pixels transparent when some
    other gray level was supposed to be the transparent color (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=18900).
    This occurred only with 1, 2, 4-bit grayscale images with Q16 or Q32
    builds.

2011-06-08  6.7.0-6 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.0-6.

2011-06-08  6.7.0-6 Cristy  <quetzlzacatenango@image...>
  * Fix transient error for composite over operator.
